Trying to migrate to Gradle. Still a couple of things to correct in the build output & dependencies
Signed-off-by: Martin Vandenbussche <vandenbusschemartin@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,14 @@ hs_err_pid*
 
 # IntelliJ project files
 .idea/*
+/Tuxcraft-Installer.iml
 
-# Maven build dir
+# Build dir
 target/*
+build/*
 
 # Common manual tests dir
 instances/*
+
+# Gradle cache
+.gradle/*
