--- a/build.gradle
+++ b/build.gradle
@@ -11,62 +11,53 @@ repositories {
 
 group = 'com.barassolutions'
 version = '1.0-SNAPSHOT'
-description = """Tuxcraft-Installer"""
+description = "Tuxcraft-Installer"
 sourceCompatibility = 11
 targetCompatibility = 11
 
+configurations {
+    // We create different dependency configurations
+    // See https://docs.gradle.org/current/userguide/java_plugin.html#sec:java_plugin_and_dependency_management
+    extraLibsForImplementation
+    extraLibsForCompileOnly
+    extraLibsForRuntimeOnly
+    // etc.
+}
+
 dependencies {
-    implementation('net.lingala.zip4j:zip4j:2.11.1') {
-        because 'Library used to create and open zip files'
-    }
-    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version:'1.1.1'
+    extraLibsForImplementation 'net.lingala.zip4j:zip4j:2.11.1', 'com.googlecode.json-simple:json-simple:1.1.1'
+    //extraLibsForCompileOnly something
+    //extraLibsForRuntimeOnly something else
+    configurations.implementation.extendsFrom(configurations.extraLibsForImplementation)
+    configurations.compileOnly.extendsFrom(configurations.extraLibsForCompileOnly)
+    configurations.runtimeOnly.extendsFrom(configurations.extraLibsForRuntimeOnly)
 }
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
+
 java { //Asking the build task to create other jars as well
+    // Not that this source jar will not include dependencies, but only the sources of this project
     withSourcesJar()
 }
 
-application { // Allowing to create the shell script to launch the jar automagically
-    manifest {
-        attributes(
-                'Main-Class': 'com.barassolutions.Main'
-        )
-    }
-    mainClass = 'com.barassolutions.Main'
-    applicationName = 'tuxcraft-installer'
-    applicationDefaultJvmArgs = []
-}
+//application { // Allowing to create the shell script to launch the jar automagically
+//    manifest {
+//        attributes('Main-Class': 'com.barassolutions.Main')
+//    }
+//    mainClass = 'com.barassolutions.Main'
+//    applicationName = 'tuxcraft-installer'
+//    applicationDefaultJvmArgs = []
+//}
 
 jar {
-    manifest {
-        attributes(
-                'Main-Class': 'com.barassolutions.Main'
-        )
-    }
-}
-
-task uberJar(type: Jar) {
-    manifest {
-        attributes(
-                'Main-Class': 'com.barassolutions.Main'
-        )
-    }
-    archiveClassifier = 'uberr'
-    baseName = project.name + '-all'
-    from sourceSets.main.output
-    dependsOn configurations.runtimeClasspath
+    duplicatesStrategy = 'WARN'
     from {
-        configurations.runtimeClasspath.findAll {it.name.endsWith('jar').collect {zipTree(it)}}
+        configurations.extraLibsForImplementation.collect {it.isDirectory() ? it : zipTree(it) }
+    }
+    manifest {
+        attributes('Main-Class': 'com.barassolutions.Main')
     }
 }
-
-//distributions {
-//    main {
-//        contents {
-//        }
-//    }
-//}
